--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -290,9 +290,18 @@ img {
         text-align: center;
     }
     
+    .profile-image {
+        width: 100%;
+        max-width: 150px;
+        display: flex;
+        justify-content: center;
+    }
+    
     .profile-image img {
-        width: 150px;
-        height: 150px;
+        width: 100%;
+        max-width: 150px;
+        height: auto;
+        aspect-ratio: 1;
     }
     
     .profile-info {
